# rinha-de-backend-2026-rust

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.api  Dockerfile.api.dev  Dockerfile.lb  Dockerfile.lb.dev  LICENSE  docker-compose.dev.yml  docker-compose.yml  ericbsantana.json  info.json
api/: Cargo.toml
api/src/: api.rs  dataset.rs  distance.rs  knn.rs  label.rs  lib.rs  main.rs  server.rs  vectorize.rs
lb/: Cargo.toml
lb/src/: main.rs
src/: main.rs
