[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
chrono = "0.4.44"
flate2 = "1.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[bin]]
name = "api"
path = "src/api.rs"

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"
