[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
bytes = "1.11.1"
chrono = "0.4.44"
flate2 = "1.1.9"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
memmap2 = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt", "net", "macros"] }

[[bin]]
name = "api"
path = "src/api.rs"

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"

[[bin]]
name = "compare"
path = "src/bin/compare.rs"
